<resources>
    <string name="app_name">Tip N Split Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="title_activity_splash_screen">@string/app_name</string>


    <!-- TextView Strings -->
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_percent">Tip Percentage (%)</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="no_of_ppl">No. of people</string>
    <string name="each_person_pay">Each Person pays</string>

    <string name="calculate">Calculate</string>
    <string name="bill_amount_hint" translatable="true">Enter bill amount</string>

    <string name="toast_message">Please enter valid bill amount</string>
    <string name="sendmail_header">Share...</string>
    <string name="no_mail_client_toast">No mail client found</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to SettingsActivity -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="home_header">Home</string>
    <string name="about_header">Home</string>

    <string name="title_activity_about">About</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_developer">Developed by Riddhi Kakadia</string>
    <string name="app_copyright">Copyright 2016, Riddhi Kakadia. All Rights Reserved.
        The software is protected by international copyright laws. \n\n\n  Icon made by Freepik from www.flaticon.com </string>

</resources>
