<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.rk.myapps.tipcalculator.AboutActivity">

    <TextView
        android:id="@+id/about_app_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/about_app_header_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/about_app_version_textview_margin_bottom"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_version"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/about_app_version_textview_text_size" />

    <TextView
        android:id="@+id/about_app_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/about_app_developer_textview_margin_bottom"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_developer"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/about_app_developer_textview_text_size" />

    <TextView
        android:id="@+id/about_app_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/app_copyright"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/about_app_copyright_textview_text_size" />

</LinearLayout>
