<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/plain_white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:showIn="@layout/activity_main">

    <!-- TIP Calculator Header -->
    <TextView
        style="@style/appheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appheader"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textColor="#009688"
        android:textStyle="bold"
        />

    <!-- User Inputs -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_background">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

        <!-- Bill Amount -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/LabelStyle"
                android:text="@string/bill_amount"
                />

            <EditText
                style="@style/InputStyle"
                android:id="@+id/bill_amount"
                android:inputType="numberDecimal"
                />
        </TableRow>

        <!-- Tip Percentage -->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/LabelStyle"
                android:text="@string/tip_percent"
                />

            <EditText
                style="@style/InputStyle"
                android:id="@+id/tip_percent"
                android:inputType="numberDecimal"
                />
        </TableRow>

        <!-- No. of people -->
        <TableRow>
            <TextView
                style="@style/LabelStyle"
                android:text="@string/no_of_ppl"
                />

            <EditText
                style="@style/InputStyle"
                android:id="@+id/no_of_ppl"
                android:inputType="number"
                />
        </TableRow>

        </TableLayout>

    </LinearLayout>

    <!-- Calculation Output -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/layout_background">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

        <!-- Tip amount -->
        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                style="@style/LabelStyle"
                android:text="@string/tip_amount"
                />

            <TextView
                style="@style/OutputStyle"
                android:id="@+id/tip_amount"
                />
        </TableRow>

        <!-- Total bill amount-->
        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                style="@style/LabelStyle"
                android:text="@string/total_amount"
                />

            <TextView
                style="@style/OutputStyle"
                android:id="@+id/total_amount"
                />
        </TableRow>

        <!-- Each person pays -->
        <TableRow android:layout_height="wrap_content">
            <TextView
                style="@style/LabelStyle"
                android:text="@string/each_person_pay"
                />

            <TextView
                style="@style/OutputStyle"
                android:id="@+id/each_person_pay"
                />
        </TableRow>
    </TableLayout>

    </LinearLayout>

   <Button
       android:id="@+id/calculate"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/calculate"
       android:layout_marginTop="35dp"
       android:layout_marginLeft="70dp"
       android:layout_marginRight="70dp"
       android:layout_gravity="center"
       android:background="@drawable/layout_background"
       android:textColor="@color/plain_white"
       android:onClick="calculateTip"
       />

</LinearLayout>